--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,5 @@
 
 *{
   font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  outline: none;
 }
