--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,7 @@
   font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   outline: none;
 }
+
+input{
+  font-size: 14px;
+}
