--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 @tailwind utilities;
 
 *{
-  font-family: 'SF Pro Display', sans-serif;
+  /* font-family: 'SF Pro Display' ,'Inter' ,sans-serif; */
+  font-family: 'Inter' ,'SF Pro Display', sans-serif;
   outline: none;
 }
 
@@ -22,6 +23,26 @@ select {
   background-repeat: no-repeat;
   background-position-x: 98%;
   background-position-y: 50%;
+}
+
+.gridRespo {
+  /* max-width: 1300px; */
+  width: 100%;
+  margin: auto;
+  display: grid;
+  gap:15px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+@media only screen and (max-width: 800px) {
+  .gridRespo {
+    /* max-width: 1000px; */
+    width: 100%;
+    margin: auto;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
+  }
 }
 
 
