--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@ select {
   background-position-y: 50%;
 }
 
+.shadow-custom {
+  box-shadow: 0px 0px 15px 0px #00000028;
+}
+
 .gridRespo {
   /* max-width: 1300px; */
   width: 100%;
