--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ select {
   margin: auto;
   display: grid;
   gap:15px;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(240px, 320px));
 }
 
 @media only screen and (max-width: 800px) {
