--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,40 @@ select {
   }
 }
 
+.container {
+  --uib-size: 40px;
+  --uib-color: #0066ff;
+  --uib-speed: .6s;
+  --uib-bg-opacity: 0.2;
+  height: var(--uib-size);
+  width: var(--uib-size);
+  transform-origin: center;
+  animation: rotate var(--uib-speed) linear infinite;
+  will-change: transform;
+  overflow: visible;
+}
 
+.car {
+  fill: none;
+  stroke: var(--uib-color);
+  stroke-dasharray: 25, 75;
+  stroke-dashoffset: 0;
+  stroke-linecap: round;
+  transition: stroke 0.5s ease;
+}
+
+.track {
+  fill: none;
+  stroke: var(--uib-color);
+  opacity: var(--uib-bg-opacity);
+  transition: stroke 0.5s ease;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 
 .custom-scrollbar{
