--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 *{
   /* font-family: 'SF Pro Display' ,'Inter' ,sans-serif; */
-  font-family: 'Inter' ,'ubuntu', sans-serif;
+  font-family: 'Inter', sans-serif;
   outline: none;
 }
 
