--- a/src/App.css
+++ b/src/App.css
@@ -97,35 +97,28 @@ select {
   }
 }
 
-.hidden-scrollbar::-webkit-scrollbar {
-  width: 0px;
-  height: 0px;
+
+
+::-webkit-scrollbar {
+  width: 13px;
+  height: 13px;
 }
 
-.custom-scrollbar {
-  overscroll-behavior: contain;
-}
-
-.custom-scrollbar::-webkit-scrollbar {
-  width: 16px;
-  height: 8px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #88888881;
-  border: 5px solid white;
+::-webkit-scrollbar-thumb {
+  background-color: #88888869;
+  border: 3px solid white;
   border-radius: 30px;
   cursor: default;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #3a3a3a81;
+::-webkit-scrollbar-thumb:hover {
+  background-color: #3a3a3a63;
 }
 
-.custom-scrollbar::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
-.custom-scrollbar::-webkit-scrollbar-corner {
+::-webkit-scrollbar-corner {
   background-color: transparent;
 }
