--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,9 @@ select {
   box-shadow: 0px 0px 15px 0px #00000028;
   color: #f9fafc;
 }
+.shadow-custom2{
+  box-shadow: 0px 4px 20px 4px #131313a8;
+}
 .gridRespo {
   width: 100%;
   margin: auto;
