--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ select {
   width: 25px;
   height: 25px;
   border: 2px solid #fff;
-  border-bottom-color: #ff3d00;
+  border-bottom-color: #488ef7;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
