--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ select {
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
-  animation: rotation 1s linear infinite;
+  animation: rotation .6s linear infinite;
 }
 
 @keyframes rotation {
