--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,23 @@ select {
   background-color: transparent;
 }
 
+/* sb_onhover */
+.sb_onhover::-webkit-scrollbar-thumb {
+  background-color: #9292924b;
+  border: 3px solid transparent;
+  border-radius: 30px;
+  cursor: default;
+}
+.sb_onhover::-webkit-scrollbar-thumb:hover {
+  background-color: #3a3a3a63;
+}
+.sb_onhover::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.sb_onhover::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
 .loader {
   width: 25px;
   height: 25px;
