--- a/src/App.css
+++ b/src/App.css
@@ -131,13 +131,13 @@ select {
 
 /* sb_onhover */
 .sb_onhover::-webkit-scrollbar-thumb {
-  background-color: #9292924b;
+  background-color: transparent;
   border: 3px solid transparent;
   border-radius: 30px;
   cursor: default;
 }
 .sb_onhover::-webkit-scrollbar-thumb:hover {
-  background-color: #3a3a3a63;
+  background-color: transparent;
 }
 .sb_onhover::-webkit-scrollbar-track {
   background-color: transparent;
