--- a/src/App.css
+++ b/src/App.css
@@ -133,17 +133,18 @@ select {
 .sb_onhover::-webkit-scrollbar-thumb {
   background-color: transparent;
   border: 3px solid transparent;
-  border-radius: 30px;
-  cursor: default;
 }
 .sb_onhover::-webkit-scrollbar-thumb:hover {
   background-color: transparent;
 }
-.sb_onhover::-webkit-scrollbar-track {
-  background-color: transparent;
+.sb_onhover:hover::-webkit-scrollbar-thumb {
+  background-color: #9292924b;
+  border: 3px solid transparent;
+  border-radius: 30px;
+  cursor: default;
 }
-.sb_onhover::-webkit-scrollbar-corner {
-  background-color: transparent;
+.sb_onhover:hover::-webkit-scrollbar-thumb:hover {
+  background-color: #3a3a3a63;
 }
 
 .loader {
